# market-aggregator

./: Cargo.toml  Dockerfile-grpc  Dockerfile-market  README.md  docker-compose.yaml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
grpc-server/: Cargo.toml  build.rs
grpc-server/src/: main.rs  queue.rs  server.rs  types.rs
market-aggregator/: Cargo.toml
market-aggregator/src/: app.rs  main.rs
market-aggregator/src/services/: binance.rs  bitstamp.rs  mod.rs
