[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.2.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
prost = "0.11.9"
tonic = "0.9.1"
tokio-stream = "0.1"
serde_json = "1.0"
sorted-vec = "0.8"
common = { path = "../common" }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.2.1", features = ["derive" ]}

[build-dependencies]
tonic-build = "0.9.1"