[package]
name = "market-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pin-project = "1.0.12"
merge-streams = "0.1"
reqwest = "0.11"
amqprs = "1.2.0"
common = { path = "../common" }